Updated Nebula grid and changed the header color for a dark theme.